--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
             </textarea>
             <label class="form-label" for="comment">Комментарий</label>
           </div>
-          <div>
+          <div class="apply-div">
             <input type="checkbox" name="apply" id="apply" />
             <label for="apply"
               >Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
