--- a/index.html
+++ b/index.html
@@ -423,7 +423,8 @@
             <label class="form-label" for="comment">Комментарий</label>
           </div>
           <div class="apply-div">
-            <input type="checkbox" name="apply" id="apply" />
+            <input class="checkbox" type="checkbox" name="apply" id="apply" />
+            <span class="icon-f"></span>
             <label for="apply"
               >Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
             </label>
