--- a/index.html
+++ b/index.html
@@ -422,11 +422,13 @@
             </textarea>
             <label class="form-label" for="comment">Комментарий</label>
           </div>
-          <div class="apply-div">
-            <input class="checkbox" type="checkbox" name="apply" id="apply" />
-            <span class="icon-f"></span>
+          <!--<div class="apply-div">!-->
+            
             <label for="apply"
-              >Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
+              >
+              <input class="checkbox" type="checkbox" name="apply" id="apply" />
+              <span class="icon-f"></span>
+              <span>Соглашаюсь с рассылкой и принимаю</span> <a href="">Условия договора</a>
             </label>
           </div>
           <button type="submit">Отправить</button>
