--- a/index.html
+++ b/index.html
@@ -493,6 +493,29 @@
               </li>
             </ul>
           </li>
+          <li>
+            <div class="subscribe-div">
+              <label class="subscribe-label" for="sum-mail"
+                >ПОДПИШИТЕСЬ НА РАССЫЛКУ</label
+              >
+              <input
+                class="subscribe-input"
+                type="email"
+                name="r-email"
+                id="sub-mail"
+                placeholder="E-mail"
+              />
+              
+            </div>
+          <li>
+            <button type="submit" class="subscribe-button" id="sub-mail">
+              <span>Подписаться </span>
+              <svg class="icon-subs" width="24" height="24">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg>
+            </button>
+          </li>  
+          </li>
         </ul>
       </div>
     </footer>
