--- a/portfolio.html
+++ b/portfolio.html
@@ -186,24 +186,20 @@
     </main>
     <footer>
       <!--Logo links in the header-->
+      <!--Logo links in the header-->
       <div class="container down-page">
         <ul class="footer-ul">
           <li class="footer-col">
             <a href="./">
               <p class="logodown">
-                <span class="logo-blue">Web</span
-                ><span class="logo-white">Studio</span>
+                <span class="logo-blue">Web</span><span class="logo-white">Studio</span>
               </p>
             </a>
             <address class="adr">
               <span>г. Киев, Бульвар Леси Украинки, 26</span> <br />
               <a href="mailto:info@example.com"> info@example.com </a>
               <br />
-              <a
-                href="tel:++++++++++++++++++++++++++++++++++++++++++++++++++79212285443"
-              >
-                +38 099 111 11 11
-              </a>
+              <a href="tel:++++++++79212285443"> +38 099 111 11 11 </a>
             </address>
           </li>
           <li>
@@ -238,6 +234,21 @@
                 </a>
               </li>
             </ul>
+          </li>
+          <li>
+            <div class="subscribe-div">
+              <label class="subscribe-label" for="sum-mail">ПОДПИШИТЕСЬ НА РАССЫЛКУ</label>
+              <input class="subscribe-input" type="email" name="r-email" id="sub-mail" placeholder="E-mail" />
+      
+            </div>
+          <li>
+            <button type="submit" class="subscribe-button" id="sub-mail">
+              <span>Подписаться </span>
+              <svg class="icon-subs" width="24" height="24">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg>
+            </button>
+          </li>
           </li>
         </ul>
       </div>
